fixed horizontal scroll

--- a/resources/css/app.pcss
+++ b/resources/css/app.pcss
@@ -10,7 +10,6 @@ button:focus {
 
 #nav-bar {
     height: var(--header-height);
-    width: 100vw;
     background-color: white;
     box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.25) inset;
 
@@ -44,29 +43,23 @@ button:focus {
     background-size: 100%;
 
     z-index: -1;
-
-    @media screen and (max-width: 1024px) {
-        left: 50%;
-        margin-left: -512px;
-    }
 }
 
 #home-body {
-    margin: 50px auto;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    justify-items: center;
-
-    > div {
-        box-sizing: border-box;
-        margin-bottom: 10px;
-    }
+    margin: 2.5rem auto 0;
+    align-items: center;
+    justify-content: center;
 
     > .home-body-child {
-        flex: 0 0 33%;
+        border-color: rgba(0, 0, 0, 0.25);
+        flex: 0 0 33.33%;
+
+/*        > #card-img {
+            background-size: 100%;
+            background-repeat: no-repeat;
+            height: 20vh;
+        }*/
     }:hover {
-         border-color: var(--primary-color);
+         border-color: var(--primary-color) !important;
      }
 }
